WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43365
[Qt] DOM listeners get wrong keycodes for some keys
https://bugs.webkit.org/show_bug.cgi?id=43365
Summary
[Qt] DOM listeners get wrong keycodes for some keys
Martin Robinson
Reported
2010-08-02 10:24:53 PDT
http://trac.webkit.org/changeset/64470
fixed some bugs and introduced tests related to invalid keyCodes sent for Print Screen and keypad insert/delete keys. WebKitQt seems to have this same issue as well.
Attachments
Blind patch
(3.43 KB, patch)
2010-08-02 10:38 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
Tested patch for this issue
(3.47 KB, patch)
2010-09-11 18:56 PDT
,
Martin Robinson
kling
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-08-02 10:28:39 PDT
Committed
r64473
: <
http://trac.webkit.org/changeset/64473
>
Martin Robinson
Comment 2
2010-08-02 10:38:46 PDT
Created
attachment 63233
[details]
Blind patch
Martin Robinson
Comment 3
2010-08-02 10:39:46 PDT
I've uploaded a patch which I'm fairly certain fixes this issue, but I'm unable to test it right now as my version of Qt is not fully up-to-date. When I can test this / get someone to test it for me, I'll r? it.
Martin Robinson
Comment 4
2010-09-11 18:56:11 PDT
Created
attachment 67323
[details]
Tested patch for this issue
Andreas Kling
Comment 5
2010-09-12 03:39:22 PDT
Comment on
attachment 67323
[details]
Tested patch for this issue Thanks for fixing this! r=me
Martin Robinson
Comment 6
2010-09-13 08:25:54 PDT
Committed
r67389
: <
http://trac.webkit.org/changeset/67389
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug