2010-09-13  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Andreas Kling.

        [Qt] DOM listeners get wrong keycodes for some keys
        https://bugs.webkit.org/show_bug.cgi?id=43365

        * platform/qt/Skipped: Unskip tests that are now passing.
2010-09-13  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Andreas Kling.

        [Qt] DOM listeners get wrong keycodes for some keys
        https://bugs.webkit.org/show_bug.cgi?id=43365

        Produce the proper keycodes for the print screen key as well as the
        keypad insert and delete keys.

        * platform/qt/PlatformKeyboardEventQt.cpp:
        (WebCore::windowsKeyCodeForKeyEvent): Fix keycode translation for the mentioned keys.

Canonical link: https://commits.webkit.org/58121@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67389 268f45cc-cd09-0410-ab3c-d52691b4dbfc